documentations des fonctionnaliter listeCollecteEncours et listeCollecteCloturer
